<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/IntroFragment"
        android:name="com.rolandasprunskas.navigationsample.fragments.IntroFragment"
        android:label="@string/intro_fragment_label"
        tools:layout="@layout/fragment_intro" />
    <fragment
        android:id="@+id/IDPasswordFragmentVerification"
        android:name="com.rolandasprunskas.navigationsample.fragments.IDPassportVerificationFragment"
        android:label="@string/id_passport_verification_fragment_label"
        tools:layout="@layout/fragment_id_password_verification" />
    <fragment
        android:id="@+id/EIDFragment"
        android:name="com.rolandasprunskas.navigationsample.fragments.EIDFragment"
        android:label="@string/eid_fragment_label"
        tools:layout="@layout/fragment_eid" />
    <fragment
        android:id="@+id/AddressFragment"
        android:name="com.rolandasprunskas.navigationsample.fragments.AddressFragment"
        android:label="@string/address_fragment_label"
        tools:layout="@layout/fragment_eid" />
    <fragment
        android:id="@+id/IntermediateLevelFragment"
        android:name="com.rolandasprunskas.navigationsample.fragments.IntermediateLevelFragment"
        android:label="@string/intermediate_level_fragment_label"
        tools:layout="@layout/fragment_intermediate_level" />
    <fragment
        android:id="@+id/AdvancedLevelFragment"
        android:name="com.rolandasprunskas.navigationsample.fragments.AdvancedLevelFragment"
        android:label="@string/advanced_level_fragment_label"
        tools:layout="@layout/fragment_advanced_level" />
    <fragment
        android:id="@+id/FinishFragment"
        android:name="com.rolandasprunskas.navigationsample.fragments.FinishFragment"
        android:label="@string/finish_fragment_label"
        tools:layout="@layout/fragment_finish" />
</navigation>